Crash in RenderBox::paintBoxDecorations when documentElement has no renderer https://bugs.webkit.org/show_bug.cgi?id=64284

Reviewed by Ryosuke Niwa.

Source/WebCore:

Test: fast/dynamic/crash-paint-no-documentElement-renderer.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::paintBackground): Check the documentElement's
renderer before using it which matches what RenderView does.

LayoutTests:

* fast/dynamic/crash-paint-no-documentElement-renderer-expected.png: Added.
* fast/dynamic/crash-paint-no-documentElement-renderer-expected.txt: Added.
* fast/dynamic/crash-paint-no-documentElement-renderer.html: Added.

* platform/chromium/test_expectations.txt:
* platform/efl/Skipped:
* platform/gtk/test_expectations.txt:
* platform/mac/test_expectations.txt:
* platform/qt/test_expectations.txt:
* platform/win/test_expectations.txt:
The test hits the ASSERT from bug 68859 in Debug. However it works well in Release.


Canonical link: https://commits.webkit.org/91172@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102787 268f45cc-cd09-0410-ab3c-d52691b4dbfc